logs/bnlp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bnlp'...
Compiling './lib/python3.5/site-packages/bnlp/__init__.py'...
***   File "./lib/python3.5/site-packages/bnlp/__init__.py", line 53
    print "percentage gibberish is", percentage
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/arabic.py'...
***   File "./lib/python3.5/site-packages/bnlp/arabic.py", line 43
    for result in  finditer(ur"(?P<keyword>\u062c\u0646\u0648\u0628|\u0634\u0645\u0627\u0644|\u0627\u0644\u0634\u0631\u0642|\u063a\u0631\u0628) (?P<location>[^ .,]*)", clean(text), MULTILINE):
                                                                                                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bnlp/data'...
Compiling './lib/python3.5/site-packages/bnlp/dates.py'...
***   File "./lib/python3.5/site-packages/bnlp/dates.py", line 100
    result = re.search(ur'(?P<day>\d{1,2}) (?P<month>\u0646\u064a\u0633\u0627\u0646|\u0627\u0644\u0643\u0627\u0646\u0648\u0646|\u0623\u0643\u062a\u0648\u0628\u0631|\u0623\u064a\u0644\u0648\u0644|\u0627\u0644\u0645\u0627\u0621|\u0623\u0628\u0631\u064a\u0644|\u0622\u0630\u0627\u0631|\u0647\u0627\u0646\u064a\u0628\u0627\u0644|\u0627\u0644\u062b\u0645\u0648\u0631|\u064a\u0648\u0646\u064a\u0648|\u0627\u0644\u0641\u0627\u062a\u062d|\u064a\u0646\u0627\u064a\u0631|\u064a\u0648\u0644\u064a\u0629|\u0645\u0627\u064a|\u062c\u0627\u0646\u0641\u064a|\u0645\u0627\u0631\u0633|\u0641\u064a\u0641\u0631\u064a|\u0627\u0644\u0646\u0648\u0627\u0631|\u0623\u0641\u0631\u064a\u0644|\u0641\u0628\u0631\u0627\u064a\u0631|\u0627\u0644\u0631\u0628\u064a\u0639|\u062a\u0634\u0631\u064a\u0646 \u0627\u0644\u062b\u0627\u0646\u064a|\u062f\u062c\u0645\u0628\u0631|\u0634\u0628\u0627\u0637|\u0646\u0627\u0635\u0631|\u064a\u0648\u0644\u064a\u0648|\u0627\u0644\u0637\u064a\u0631|\u0646\u0648\u0641\u0645\u0628\u0631|\u0623\u0648\u062a|\u062c\u0648\u0627\u0646|\u0622\u0628|\u0623\u063a\u0633\u0637\u0633|\u062c\u0648\u064a\u0644\u064a\u0629|\u062f\u064a\u0633\u0645\u0628\u0631|\u0633\u0628\u062a\u0645\u0628\u0631|\u0623\u064a \u0627\u0644\u0646\u0627\u0631|\u0627\u0644\u062a\u0645\u0648\u0631|\u0646\u0648\u0646\u0628\u0631|\u0645\u0627\u064a\u0648|\u0627\u0644\u062d\u0631\u062b|\u062a\u0645\u0648\u0632|\u0623\u064a\u0627\u0631|\u0634\u062a\u0645\u0628\u0631|\u062a\u0634\u0631\u064a\u0646 \u0627\u0644\u0623\u0648\u0644|\u063a\u0634\u062a|\u062d\u0632\u064a\u0631\u0627\u0646|\u0627\u0644\u0635\u064a\u0641|\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u062b\u0627\u0646\u064a|\u0625\u0628\u0631\u064a\u0644|\u064a\u0648\u0644\u064a\u0648\u0632|\u0643\u0627\u0646\u0648\u0646 \u0627\u0644\u0623\u0648\u0644|\u064a\u0648\u0646\u064a\u0629|\ufe82\ufe91)\u060c (?P<year>\d{4})', text)
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bnlp/interviews.py'...
***   File "./lib/python3.5/site-packages/bnlp/interviews.py", line 14
    interview_group = re.search(ur"((?:<[^>]*>|\n)*(?:[^>\n]*\u061f)(?:<[^>]*>|\n)*([^<\n]*)(?:<[^>]*>|\n)*){2,10}", text)
                                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bnlp/locations.py'...
***   File "./lib/python3.5/site-packages/bnlp/locations.py", line 16
    print "if first time calling, initialize setOfNonLocations"
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/organizations.py'...
***   File "./lib/python3.5/site-packages/bnlp/organizations.py", line 144
    print 'starting getOrgsFromSoup'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/pagination.py'...
***   File "./lib/python3.5/site-packages/bnlp/pagination.py", line 3
    result = findall(ur"(?:\u0627\u0644\u0635\u0641\u062d\u0629|\ufe8e\ufee0\ufebc\ufed4\ufea3\ufe93) (?P<current_page>\d+) (?:\u0645\u0646|\ufee2\ufee7) (?P<total_pages>\d+)", text, MULTILINE)
                                                                                                                                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bnlp/statements.py'...
***   File "./lib/python3.5/site-packages/bnlp/statements.py", line 19
    for statement in finditer(ur"(?P<verb>\u0648\u0642\u0627\u0644\u062a) \u0648?(?P<speaker>[^\"]*) \"(?P<quote>[^\"]*)\"",text, MULTILINE):
                                                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bnlp/translate.py'...
***   File "./lib/python3.5/site-packages/bnlp/translate.py", line 19
    print "phrase_translation is", phrase_translation
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/transliterate.py'...
***   File "./lib/python3.5/site-packages/bnlp/transliterate.py", line 17
    print '\nstarting get_variations_as_pattern with', string
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/tree.py'...
***   File "./lib/python3.5/site-packages/bnlp/tree.py", line 2
    print "starting treeToString with", treeToString
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/utils.py'...
***   File "./lib/python3.5/site-packages/bnlp/utils.py", line 11
    print "rows are", rows
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bnlp/variate.py'...
***   File "./lib/python3.5/site-packages/bnlp/variate.py", line 9
    print '\nstarting get_variations_as_pattern with', string
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bnlp-0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
